--- a/html/todolist.html
+++ b/html/todolist.html
@@ -7,43 +7,96 @@
 </head>
 <body>
     <header>
-        <div class="">
-            <div class="">
-                그린데이 로고
+        <div class="header">
+            <div class="header__logo">
+                <a href="index.html" class="logo__link">
+                    그린데이 로고
+                </a>
             </div>
-            <div class="">
-                <a href="">로그인</a> <!--로그인 시 내 닉네임으로 바뀜-->
+            <div class="header__auth">
+                <a href="#" class="header__auth__link">
+                    로그인
+                </a> <!--로그인 시 내 닉네임으로 바뀜-->
             </div>
         </div>
     </header>
-    <div class="">
-        <ol class="">
-            <li class="">
-                <div class="">
-                    <h1 class="">월요일</h1>
-                    <ul class="">
-                        <li>할 일 1</li>
-                    </ul>
-                    <form class="">
-                        <input type="text" placeholder="할 일" /> <!--지난 날짜 빼고 input 보이게-->
-                    </form>
-                </div>
+    <div class="day">
+        <ol class="day__list">
+            <li class="day__item">
+                <h1 class="title">일요일</h1>
+                <ul class="todolist">
+                    <li>할 일 1</li>
+                </ul>
+                <form class="add-form">
+                    <input type="text" class="add-form__input" placeholder="할 일" /> <!--지난 날짜 빼고 input 보이게-->
+                    <button class="add-form__button">추가</button>
+                </form>
             </li>
-            <li class="">
-                <div class="">
-                    <h1 class="">화요일</h1>
-                    <ul class="">
-                        <li>할 일 1</li>
-                    </ul>
-                    <form class="">
-                        <input type="text" placeholder="할 일" />
-                    </form>
-                </div>
+            <li class="day__item">
+                <h1 class="title">월요일</h1>
+                <ul class="todolist">
+                    <li>할 일 1</li>
+                </ul>
+                <form class="add-form">
+                    <input type="text" class="add-form__input" placeholder="할 일" /> <!--지난 날짜 빼고 input 보이게-->
+                    <button class="add-form__button">추가</button>
+                </form>
+            </li>
+            <li class="day__item">
+                <h1 class="title">화요일</h1>
+                <ul class="todolist">
+                    <li>할 일 1</li>
+                </ul>
+                <form class="add-form">
+                    <input type="text" class="add-form__input" placeholder="할 일" /> <!--지난 날짜 빼고 input 보이게-->
+                    <button class="add-form__button">추가</button>
+                </form>
+            </li>
+            <li class="day__item">
+                <h1 class="title">수요일</h1>
+                <ul class="todolist">
+                    <li>할 일 1</li>
+                </ul>
+                <form class="add-form">
+                    <input type="text" class="add-form__input" placeholder="할 일" /> <!--지난 날짜 빼고 input 보이게-->
+                    <button class="add-form__button">추가</button>
+                </form>
+            </li>
+            <li class="day__item">
+                <h1 class="title">목요일</h1>
+                <ul class="todolist">
+                    <li>할 일 1</li>
+                </ul>
+                <form class="add-form">
+                    <input type="text" class="add-form__input" placeholder="할 일" /> <!--지난 날짜 빼고 input 보이게-->
+                    <button class="add-form__button">추가</button>
+                </form>
+            </li>
+            <li class="day__item">
+                <h1 class="title">금요일</h1>
+                <ul class="todolist">
+                    <li>할 일 1</li>
+                </ul>
+                <form class="add-form">
+                    <input type="text" class="add-form__input" placeholder="할 일" /> <!--지난 날짜 빼고 input 보이게-->
+                    <button class="add-form__button">추가</button>
+                </form>
+            </li>
+            <li class="day__item">
+                <h1 class="title">토요일</h1>
+                <ul class="todolist">
+                    <li>할 일 1</li>
+                </ul>
+                <form class="add-form">
+                    <input type="text" class="add-form__input" placeholder="할 일" /> <!--지난 날짜 빼고 input 보이게-->
+                    <button class="add-form__button">추가</button>
+                </form>
             </li>
         </ol>
     </div>
-    <button type="button" class="">할 일</button> <!--버튼 클릭하면 할 일이 보이고 버튼 내용은 일기로 변함, 또 누르면 반대로-->
+    <button type="button" class="type__button">할 일</button> 
+    <!--버튼 클릭하면 할 일이 보이고 버튼 내용은 일기로 변함, 또 누르면 반대로-->
     <!--로그인 안했으면 일기는 전부 자물쇠 처리 되어서 안보임-->
-    <button type="button" class="">캘린더로 이동</button>
+    <button type="button" class="calendar__button">캘린더로 이동</button>
 </body>
 </html>
